some, gen function started

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
+[+] - sign up
+[+] - sign in
 [-] - select diagram type
 [-] - select diagram theme
 [-] - add/remove rate records
 [-] - add/remove indicator records
 [-] - add/remove group indicator records
 [-] - delimitation of rights
-[-] - sign up
-[-] - sign in
 [-] - guest mode
 [-] - manager mode
 [-] - admin panel
